--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -33,7 +33,14 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+
+//    Zxing版本可行版
+//    implementation 'com.google.zxing:core:3.2.1'
+//    implementation 'cn.bingoogolapple:bga-qrcodecore:1.1.7@aar'
+//    implementation 'cn.bingoogolapple:bga-zxing:1.1.7@aar'
+
     implementation 'com.google.zxing:core:3.2.1'
-    implementation 'cn.bingoogolapple:bga-qrcodecore:1.1.7@aar'
     implementation 'cn.bingoogolapple:bga-zxing:1.1.7@aar'
+    implementation 'cn.bingoogolapple:bga-qrcode-zbar:1.3.7'
+
 }
