--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,16 +36,24 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+
     //    Zxing布局包
-    implementation 'cn.bingoogolapple:bga-photopicker:1.2.8@aar'
-    implementation 'cn.bingoogolapple:bga-baseadapter:1.2.9@aar'
     implementation 'cn.bingoogolapple:bga-flowlayout:1.0.0@aar'
     //Zxing bao
     implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.7'
     //Picture Select
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.3.2'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    //slide
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    //图片加载
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    //bga picture selector
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    //图片选择基包
+    implementation 'cn.bingoogolapple:bga-photopicker:1.2.8@aar'
+    implementation 'cn.bingoogolapple:bga-baseadapter:2.0.0@aar'
 
 
 
