--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,14 +38,18 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //    Zxing布局包
     implementation 'cn.bingoogolapple:bga-photopicker:1.2.8@aar'
-    implementation 'cn.bingoogolapple:bga-baseadapter:1.2.9@aar'
+    implementation 'cn.bingoogolapple:bga-baseadapter:2.0.0@aar'
     implementation 'cn.bingoogolapple:bga-flowlayout:1.0.0@aar'
     //Zxing bao
     implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.7'
     //Picture Select
     implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.3.2'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    //lite
+    implementation 'com.king.zxing:zxing-lite:1.1.4'
+    api 'com.google.zxing:core:3.4.0'
+
 
 
 
