--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TestScanActivity"></activity>
-        <activity android:name=".PictureActivity"></activity>
+        <activity android:name=".ResultActivity"></activity>
+        <activity android:name=".TestScanActivity" />
+        <activity android:name=".PictureActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
